# cmake-tpl

./: .gitmodules  CMakeLists.txt  README.md
include/: foo.h
src/: CMakeLists.txt  foo.cc
test/: CMakeLists.txt  foo_tests.cc
third/: CMakeLists.txt
